--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9047,7 +9047,7 @@ img.mfp-img {
 .header-sticky.is-sticky {
   -webkit-animation: 600ms ease-in-out 0s normal none 1 running fadeInDown;
   animation: 600ms ease-in-out 0s normal none 1 running fadeInDown;
-  background: rgba(250, 250, 250, 0.9) none repeat scroll 0 0;
+  background: #fff;
   -webkit-box-shadow: 0 0px 10px rgba(0, 0, 0, 0.4);
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.4);
   left: 0;
@@ -10556,6 +10556,12 @@ ul.minicart-pricing-box li:last-child {
   animation: 900ms cubic-bezier(0.2, 1, 0.22, 1) 0s normal none 1 running fadeInDown;
 }
 
+@media(max-width: 768px) {
+  .header-sticky.is-sticky {
+    padding: 5 0;
+  }
+}
+
 .sticky.is-sticky .mobile-header-top {
   display: none;
 }
@@ -11392,7 +11398,7 @@ ul.minicart-pricing-box li:last-child {
   top: 50%;
   width: 60px;
   z-index: 999;
-  font-size: 20px;
+  font-size: 40px;
   visibility: hidden;
   opacity: 0;
   -ms-filter: 0;
@@ -12481,7 +12487,7 @@ ul.minicart-pricing-box li:last-child {
   opacity: 0;
   visibility: hidden;
   transition: all 0.4s ease-in-out;
-  transform: rotate(15deg);
+  /* transform: rotate(15deg); */
 }
 @media only screen and (min-width: 1200px) and (max-width: 1599px) {
   .banner-content {
@@ -14675,8 +14681,12 @@ justify-content: space-between;*/
 
 .vjlogo-size{
   width: 95px;
+  margin: 0 auto;
 }
 
+.vjlogo-size span {
+  font-weight: 900;
+}
 .p16{
   font-size: 16px;
 }
@@ -14704,15 +14714,15 @@ justify-content: space-between;*/
 }
 
 .shape-inner {	
-  /* height: calc(310px + 10px);  */
-  /* width: calc(240px + 10px); */
+  height: calc(310px + 10px); 
+  width: calc(240px + 10px);
   /* background: url(https://images.pexels.com/photos/4195589/pexels-photo-4195589.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500) no-repeat center;
   background-size: cover; */
   margin: auto;
 }
 .octagon2 {
-  /* -webkit-clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%); */
-      /* clip-path: polygon(15% 0%, 85% 0%, 100% 15%, 100% 85%, 85% 100%, 15% 100%, 0% 85%, 0% 15%); */
+  -webkit-clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+      clip-path: polygon(15% 0%, 85% 0%, 100% 15%, 100% 85%, 85% 100%, 15% 100%, 0% 85%, 0% 15%);
 }
 
 
