--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -11,7 +11,6 @@
 @media(max-width: 768px) {
     .shopcart-icon-group {
         position: sticky;
-        padding: 5px;
         background: #fff;
         right: 0;
         z-index: 999;
@@ -50,6 +49,9 @@
     transform: translate(-50%, -50%);
 }
 
+.shopCart {
+    position: relative;
+}
 
 
 /*修改套版原有樣式*/
@@ -75,7 +77,13 @@
         height: 200px;
     }
 }
-
+@media(max-width: 576px) {
+    .shopcart-icon-group {
+        padding-left: 10px;
+        padding-right: 10px;
+        height: 50px;
+    }
+}
 @media(max-width: 320px) {
     .custom-container {
         width: 320px;
