--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14470,8 +14470,8 @@ justify-content: space-between;*/
   background: #333;
 }
 /* .single-team:hover .single-team-info {
-  margin-top: -60px; */
-}
+  margin-top: -60px; }*/
+
 .single-team:hover .personsl-socail {
   visibility: visible;
   opacity: 1;
