--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,9 +1,8 @@
 /*--
     02. Header Css
 -----------------------*/
-.header-top-area {
-    
-}
+// .header-top-area {
+// }
 .transparent-header {
     background-color: transparent;
     position: absolute;
@@ -44,9 +43,6 @@
             &::after{ 
                 display: none;
             }
-        }
-        & a {
-            
         }
     }
 }
@@ -467,6 +463,9 @@
         visibility: visible;
         @include opacity(1);
         top: 100%;
+    }
+    @media(max-width:576px) {
+        padding-top: 20px;
     }
 }
 #cart-total { 
