--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14713,7 +14713,8 @@ justify-content: space-between;*/
   height: calc(320px + 16px);
   width: calc(250px + 16px);
   /* margin: 25px; */
-  background-color: #717171;
+  /* background-color: #717171; */
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   /* linear-gradient(to bottom right, #ff3cac, #562b7c, #2b86c5) */
 }
 
