--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13467,18 +13467,32 @@ ul.minicart-pricing-box li:last-child {
   padding: 0 8px;
   height: 30px;
 }
-
+.product-top-cate {
+  display: none;
+}
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+  .product-cate {
+    display: none;
+  }
+  .product-top-cate {
+    display: block;
+  }
   .shop-sidebar-wrap {
     margin-top: 80px;
   }
 }
 @media only screen and (max-width: 767px) {
+  .product-top-cate {
+    display: block;
+  }
   .shop-sidebar-wrap {
     margin-top: 70px;
   }
 }
 @media only screen and (max-width: 479px) {
+  .product-top-cate {
+    display: block;
+  }
   .shop-sidebar-wrap {
     margin-top: 60px;
   }
