--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,7 +211,12 @@ a:focus {
 }
 @media only screen and (max-width: 479px) {
   .container {
-    width: 300px;
+    width: 400px;
+  }
+}
+@media only screen and (max-width: 375px) {
+  .container {
+    width: 100%;
   }
 }
 .bold {
@@ -14740,10 +14745,10 @@ justify-content: space-between;*/
 
 
 .shape-outer {
-  display: flex;
-  flex-shrink: 0;
-  height: calc(320px + 16px);
-  width: calc(250px + 16px);
+  /* display: flex;
+  flex-shrink: 0; */
+  /* height: calc(270px + 16px);
+  width: calc(200px + 16px); */
   /* margin: 25px; */
   /* background-color: #717171; */
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
